--- a/power.ipynb
+++ b/power.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,15 +16,11 @@
     }
    ],
    "source": [
-    "\n",
-    "from numpy import full\n",
-    "\n",
-    "\n",
-    "KiloWattHours = 0.1\n",
+    "KiloWatt = 0.1\n",
     "full_power_time = 8\n",
     "low_power_time = 9\n",
     "\n",
-    "power = KiloWattHours * full_power_time + 0.5 * KiloWattHours * low_power_time\n",
+    "power = KiloWatt * full_power_time + 0.5 * KiloWatt * low_power_time\n",
     "\n",
     "print(power)\n",
     "\n",
@@ -40,16 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.777777777777778e-06\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -79,33 +68,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>864</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>12</td>\n",
+       "      <td>894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>856</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>14</td>\n",
+       "      <td>892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>856</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>14</td>\n",
+       "      <td>892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>856</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>14</td>\n",
+       "      <td>892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>856</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>14</td>\n",
+       "      <td>892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -114,55 +103,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50677</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>626</td>\n",
-       "      <td>280</td>\n",
+       "      <th>25996</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>538</td>\n",
+       "      <td>368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50678</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>629</td>\n",
-       "      <td>277</td>\n",
+       "      <th>25997</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>538</td>\n",
+       "      <td>368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50679</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>629</td>\n",
-       "      <td>277</td>\n",
+       "      <th>25998</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>538</td>\n",
+       "      <td>368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50680</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>629</td>\n",
-       "      <td>277</td>\n",
+       "      <th>25999</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>537</td>\n",
+       "      <td>369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50681</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>629</td>\n",
-       "      <td>277</td>\n",
+       "      <th>26000</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>536</td>\n",
+       "      <td>370</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>50682 rows × 3 columns</p>\n",
+       "<p>26001 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       delta_time  count_on  count_off\n",
-       "0             0.1        42        864\n",
-       "1             0.1        50        856\n",
-       "2             0.1        50        856\n",
-       "3             0.1        50        856\n",
-       "4             0.1        50        856\n",
+       "0            0.01        12        894\n",
+       "1            0.01        14        892\n",
+       "2            0.01        14        892\n",
+       "3            0.01        14        892\n",
+       "4            0.01        14        892\n",
        "...           ...       ...        ...\n",
-       "50677         0.1       626        280\n",
-       "50678         0.1       629        277\n",
-       "50679         0.1       629        277\n",
-       "50680         0.1       629        277\n",
-       "50681         0.1       629        277\n",
+       "25996        0.01       538        368\n",
+       "25997        0.01       538        368\n",
+       "25998        0.01       538        368\n",
+       "25999        0.01       537        369\n",
+       "26000        0.01       536        370\n",
        "\n",
-       "[50682 rows x 3 columns]"
+       "[26001 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -172,36 +161,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.24165555555556\n",
-      "1.4078333333333335\n",
-      "12.07529300343317\n"
+      "338.0\n",
+      "568.0\n"
      ]
     }
    ],
    "source": [
-    "from numpy import disp\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "KiloWattSeconds = KiloWattHours / 60 / 60 / 10\n",
-    "print(KiloWattSeconds)\n",
-    "\n",
     "\n",
     "df = pd.read_csv('data.csv')\n",
     "\n",
     "display(df)\n",
     "\n",
-    "test_power = df['count_on'].sum() * KiloWattSeconds\n",
+    "avarge_on = np.round(df['count_on'].sum() / len(df))\n",
+    "avarge_off = np.round(df['count_off'].sum() / len(df))\n",
     "\n",
-    "print(test_power)\n",
-    "\n",
-    "hours_test = (len(df)*0.01)/60/60\n",
-    "\n",
-    "print(hours_test)\n",
-    "\n",
-    "print(totalTime/hours_test)\n",
-    "\n",
-    "total_power_test = test_power * (totalTime/hours_test)\n"
+    "print(avarge_on)\n",
+    "print(avarge_off)\n"
    ]
   },
   {
@@ -213,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -221,13 +198,16 @@
      "output_type": "stream",
      "text": [
       "100 to 0 Results:\n",
-      "667.0591768280652\n",
-      "0.5890147256759958\n"
+      "574.6\n",
+      "0.507373068432671\n"
      ]
     }
    ],
    "source": [
     "print(\"100 to 0 Results:\")\n",
+    "\n",
+    "total_power_test = KiloWatt * avarge_on * totalTime\n",
+    "\n",
     "print(total_power_test)\n",
     "\n",
     "print(total_power_test/totalPower)"
@@ -242,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,15 +230,13 @@
      "output_type": "stream",
      "text": [
       "100 to 0 at afternoon and 50 to 0 at nigth Results:\n",
-      "505.34786123338273\n",
-      "0.4462232770272695\n"
+      "422.50000000000006\n",
+      "0.37306843267108175\n"
      ]
     }
    ],
    "source": [
-    "total_power_test_hour = total_power_test/16.5\n",
-    "\n",
-    "total_power_test_100_50 = total_power_test_hour * full_power_time + 0.5 * total_power_test_hour * low_power_time\n",
+    "total_power_test_100_50 = KiloWatt * avarge_on * full_power_time + 0.5 * KiloWatt * avarge_on * low_power_time\n",
     "\n",
     "print(\"100 to 0 at afternoon and 50 to 0 at nigth Results:\")\n",
     "print(total_power_test_100_50)\n",
@@ -275,31 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.154022222222224\n",
-      "5.682490825145021\n",
       "100 to 50 at afternoon and 50 to 0 at nigth Results:\n",
-      "710.7927608032497\n",
-      "0.6276315768682117\n"
+      "649.7\n",
+      "0.5736865342163355\n"
      ]
     }
    ],
    "source": [
-    "test_power = df['count_off'].sum() * KiloWattSeconds * 0.5\n",
     "\n",
-    "print(test_power)\n",
-    "\n",
-    "hours_test = (len(df)*0.01)/60/60\n",
-    "\n",
-    "print(full_power_time/hours_test)\n",
-    "\n",
-    "total_power_test_100to50_50to0 = test_power * (full_power_time/hours_test) + total_power_test_100_50\n",
+    "total_power_test_100to50_50to0 = KiloWatt * avarge_on * full_power_time + 0.5 * KiloWatt * avarge_off * full_power_time + 0.5 * KiloWatt * avarge_on * low_power_time\n",
     "\n",
     "print(\"100 to 50 at afternoon and 50 to 0 at nigth Results:\")\n",
     "print(total_power_test_100to50_50to0)\n",
@@ -316,49 +285,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4501666666666668\n",
-      "11.72279048385243\n"
+      "22.66835890927272\n",
+      "22.66835890927272\n",
+      "7.680000000000001e-05\n",
+      "1.9200000000000003e-05\n",
+      "9.600000000000001e-06\n"
      ]
     }
    ],
    "source": [
-    "send_msg_count = 57794345\n",
-    "receive_msg_count = 57794345\n",
+    "#https://www.elecrow.com/high-power-100mw-2-4g-wireless-transceiver-module-rf-communication-nrf24l01p-pa.html\n",
+    "#https://chat.openai.com/share/98fbd772-19d6-4603-9518-2e5a362eb3bf \n",
     "\n",
-    "hours_test = (52206*0.01)/60/60\n",
-    "print(hours_test)\n",
-    "print(totalTime/hours_test)\n",
-    "to_total = totalTime/hours_test"
+    "send_msg_count = 5894\n",
+    "receive_msg_count = 5894\n",
+    "\n",
+    "avarge_msg_send = 5894/len(df) * 100\n",
+    "avarge_msg_receive = 5894/len(df) * 100\n",
+    "\n",
+    "print(avarge_msg_send)\n",
+    "print(avarge_msg_receive)\n",
+    "\n",
+    "msg_bits = 192\n",
+    "\n",
+    "watt = 0.1\n",
+    "\n",
+    "data_rate_250kbps = 250000\n",
+    "data_rate_1mbps = 1000000\n",
+    "data_rate_2mbps = 2000000\n",
+    "\n",
+    "energy_250kbps = (msg_bits  * watt / data_rate_250kbps)\n",
+    "energy_1mbps = (msg_bits  * watt / data_rate_1mbps) \n",
+    "energy_2mbps = (msg_bits  * watt / data_rate_2mbps)\n",
+    "\n",
+    "print(energy_250kbps)\n",
+    "print(energy_1mbps)\n",
+    "print(energy_2mbps)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "677510997.5864843\n",
-      "677510997.5864843\n"
+      "Energy consumption at 250kbps:\n",
+      "0.20055513187954313 KwH\n",
+      "Energy consumption at 1mbps:\n",
+      "0.05013878296988578 KwH\n",
+      "Energy consumption at 2mbps:\n",
+      "0.02506939148494289 KwH\n"
      ]
     }
    ],
    "source": [
-    "total_send_msg_count = send_msg_count * to_total\n",
-    "total_receive_msg_count = receive_msg_count * to_total\n",
+    "energy_250kbps = (msg_bits * (avarge_msg_send + avarge_msg_receive) * watt / data_rate_250kbps) * 16 * 60 * 60\n",
+    "energy_1mbps = (msg_bits * (avarge_msg_send + avarge_msg_receive) * watt / data_rate_1mbps) * 16 * 60 * 60\n",
+    "energy_2mbps = (msg_bits * (avarge_msg_send + avarge_msg_receive) * watt / data_rate_2mbps) * 16 * 60 * 60\n",
     "\n",
-    "print(total_send_msg_count)\n",
-    "print(total_receive_msg_count)\n",
-    "\n"
+    "print(\"Energy consumption at 250kbps:\")\n",
+    "print(energy_250kbps / 1000, \"KwH\")\n",
+    "print(\"Energy consumption at 1mbps:\")\n",
+    "print(energy_1mbps / 1000, \"KwH\")\n",
+    "print(\"Energy consumption at 2mbps:\")\n",
+    "print(energy_2mbps / 1000, \"KwH\")"
    ]
   }
  ],
