--- a/power.ipynb
+++ b/power.ipynb
@@ -307,8 +307,8 @@
     "send_msg_count = 5894\n",
     "receive_msg_count = 5894\n",
     "\n",
-    "avarge_msg_send = 5894/len(df) * 100\n",
-    "avarge_msg_receive = 5894/len(df) * 100\n",
+    "avarge_msg_send = send_msg_count/len(df) * 100\n",
+    "avarge_msg_receive = receive_msg_count/len(df) * 100\n",
     "\n",
     "print(avarge_msg_send)\n",
     "print(avarge_msg_receive)\n",
