--- a/power.ipynb
+++ b/power.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.25\n",
-      "Current power consumption Results:\n",
-      "1132.5\n"
+      "Baseline 1:\n",
+      "1540.2000000000003\n",
+      "Baseline 2:\n",
+      "1132.5\n",
+      "Baseline2/Baseline1:  73.52941176470587 %\n",
+      "Baseline1/Baseline2:  136.00000000000003 %\n"
      ]
     }
    ],
@@ -20,23 +23,33 @@
     "full_power_time = 8\n",
     "low_power_time = 9\n",
     "\n",
-    "power = KiloWatt * full_power_time + 0.5 * KiloWatt * low_power_time\n",
+    "power_all_time = KiloWatt * (full_power_time+ low_power_time)\n",
+    "power_split_time = KiloWatt * full_power_time + 0.5 * KiloWatt * low_power_time\n",
     "\n",
-    "print(power)\n",
+    "# print(power)\n",
     "\n",
     "numberOfLamps = 906\n",
     "\n",
-    "totalPower = numberOfLamps * power\n",
+    "# totalPower = numberOfLamps * power\n",
+    "# total_power_baseline1 = numberOfLamps * power_all_time\n",
+    "total_power_baseline1 = numberOfLamps * power_all_time\n",
+    "total_power_baseline2 = numberOfLamps * power_split_time\n",
     "\n",
-    "print(\"Current power consumption Results:\")\n",
-    "print(totalPower)\n",
+    "# print(\"Current power consumption Results:\")\n",
+    "print(\"Baseline 1:\")\n",
+    "print(total_power_baseline1)\n",
+    "print(\"Baseline 2:\")\n",
+    "print(total_power_baseline2)\n",
     "\n",
-    "totalTime = full_power_time + low_power_time\n"
+    "totalTime = full_power_time + low_power_time\n",
+    "\n",
+    "print(\"Baseline2/Baseline1: \", (total_power_baseline2/total_power_baseline1) * 100, \"%\")\n",
+    "print(\"Baseline1/Baseline2: \", (total_power_baseline1/total_power_baseline2) * 100, \"%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -103,55 +116,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25996</th>\n",
+       "      <th>192187</th>\n",
        "      <td>0.01</td>\n",
-       "      <td>538</td>\n",
-       "      <td>368</td>\n",
+       "      <td>519</td>\n",
+       "      <td>387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25997</th>\n",
+       "      <th>192188</th>\n",
        "      <td>0.01</td>\n",
-       "      <td>538</td>\n",
-       "      <td>368</td>\n",
+       "      <td>519</td>\n",
+       "      <td>387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25998</th>\n",
+       "      <th>192189</th>\n",
        "      <td>0.01</td>\n",
-       "      <td>538</td>\n",
-       "      <td>368</td>\n",
+       "      <td>519</td>\n",
+       "      <td>387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25999</th>\n",
+       "      <th>192190</th>\n",
        "      <td>0.01</td>\n",
-       "      <td>537</td>\n",
-       "      <td>369</td>\n",
+       "      <td>522</td>\n",
+       "      <td>384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26000</th>\n",
+       "      <th>192191</th>\n",
        "      <td>0.01</td>\n",
-       "      <td>536</td>\n",
-       "      <td>370</td>\n",
+       "      <td>522</td>\n",
+       "      <td>384</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>26001 rows × 3 columns</p>\n",
+       "<p>192192 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       delta_time  count_on  count_off\n",
-       "0            0.01        12        894\n",
-       "1            0.01        14        892\n",
-       "2            0.01        14        892\n",
-       "3            0.01        14        892\n",
-       "4            0.01        14        892\n",
-       "...           ...       ...        ...\n",
-       "25996        0.01       538        368\n",
-       "25997        0.01       538        368\n",
-       "25998        0.01       538        368\n",
-       "25999        0.01       537        369\n",
-       "26000        0.01       536        370\n",
+       "        delta_time  count_on  count_off\n",
+       "0             0.01        12        894\n",
+       "1             0.01        14        892\n",
+       "2             0.01        14        892\n",
+       "3             0.01        14        892\n",
+       "4             0.01        14        892\n",
+       "...            ...       ...        ...\n",
+       "192187        0.01       519        387\n",
+       "192188        0.01       519        387\n",
+       "192189        0.01       519        387\n",
+       "192190        0.01       522        384\n",
+       "192191        0.01       522        384\n",
        "\n",
-       "[26001 rows x 3 columns]"
+       "[192192 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -161,8 +174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "338.0\n",
-      "568.0\n"
+      "339.0\n",
+      "567.0\n"
      ]
     }
    ],
@@ -185,12 +198,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "100 til 0"
+    "# Scenario 1 (100 to 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -198,31 +211,33 @@
      "output_type": "stream",
      "text": [
       "100 to 0 Results:\n",
-      "574.6\n",
-      "0.507373068432671\n"
+      "576.3\n",
+      "Compared to baseline 1:  0.3741721854304635\n",
+      "Compared to baseline 2:  0.5088741721854304\n"
      ]
     }
    ],
    "source": [
     "print(\"100 to 0 Results:\")\n",
     "\n",
-    "total_power_test = KiloWatt * avarge_on * totalTime\n",
+    "scenario1_power = KiloWatt * avarge_on * totalTime\n",
     "\n",
-    "print(total_power_test)\n",
+    "print(scenario1_power)\n",
     "\n",
-    "print(total_power_test/totalPower)"
+    "print(\"Compared to baseline 1: \", scenario1_power/total_power_baseline1)\n",
+    "print(\"Compared to baseline 2: \", scenario1_power/total_power_baseline2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "100 i aften of 50 i nat"
+    "# Scenario 2 (100 to 0 and 50 to 0 i nat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +245,9 @@
      "output_type": "stream",
      "text": [
       "100 to 0 at afternoon and 50 to 0 at nigth Results:\n",
-      "422.50000000000006\n",
-      "0.37306843267108175\n"
+      "423.75\n",
+      "Compared to baseline 1:  27.512660693416436\n",
+      "Compared to baseline 2:  37.41721854304636\n"
      ]
     }
    ],
@@ -241,19 +257,22 @@
     "print(\"100 to 0 at afternoon and 50 to 0 at nigth Results:\")\n",
     "print(total_power_test_100_50)\n",
     "\n",
-    "print(total_power_test_100_50/totalPower)"
+    "# print(total_power_test_100_50/totalPower)\n",
+    "\n",
+    "print(\"Compared to baseline 1: \", total_power_test_100_50/total_power_baseline1 * 100)\n",
+    "print(\"Compared to baseline 2: \", total_power_test_100_50/total_power_baseline2 * 100)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "100-50 i aften of 50-0 i nat"
+    "# Scenario 3 (50 to 100 and 0 to 50 at night)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +280,9 @@
      "output_type": "stream",
      "text": [
       "100 to 50 at afternoon and 50 to 0 at nigth Results:\n",
-      "649.7\n",
-      "0.5736865342163355\n"
+      "650.55\n",
+      "Compared to baseline 1:  42.23802103622905\n",
+      "Compared to baseline 2:  57.44370860927152\n"
      ]
     }
    ],
@@ -270,10 +290,14 @@
     "\n",
     "total_power_test_100to50_50to0 = KiloWatt * avarge_on * full_power_time + 0.5 * KiloWatt * avarge_off * full_power_time + 0.5 * KiloWatt * avarge_on * low_power_time\n",
     "\n",
+    "\n",
+    "\n",
     "print(\"100 to 50 at afternoon and 50 to 0 at nigth Results:\")\n",
     "print(total_power_test_100to50_50to0)\n",
     "\n",
-    "print(total_power_test_100to50_50to0/totalPower)\n"
+    "# print(total_power_test_100to50_50to0/totalPower)\n",
+    "print(\"Compared to baseline 1: \", total_power_test_100to50_50to0/total_power_baseline1 * 100)\n",
+    "print(\"Compared to baseline 2: \", total_power_test_100to50_50to0/total_power_baseline2 * 100)\n"
    ]
   },
   {
@@ -285,15 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.66835890927272\n",
-      "22.66835890927272\n",
+      "16.77229020979021\n",
+      "16.77229020979021\n",
       "7.680000000000001e-05\n",
       "1.9200000000000003e-05\n",
       "9.600000000000001e-06\n"
@@ -304,8 +328,8 @@
     "#https://www.elecrow.com/high-power-100mw-2-4g-wireless-transceiver-module-rf-communication-nrf24l01p-pa.html\n",
     "#https://chat.openai.com/share/98fbd772-19d6-4603-9518-2e5a362eb3bf \n",
     "\n",
-    "send_msg_count = 5894\n",
-    "receive_msg_count = 5894\n",
+    "send_msg_count = 32235\n",
+    "receive_msg_count = 32235\n",
     "\n",
     "avarge_msg_send = send_msg_count/len(df) * 100\n",
     "avarge_msg_receive = receive_msg_count/len(df) * 100\n",
@@ -332,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -340,11 +364,11 @@
      "output_type": "stream",
      "text": [
       "Energy consumption at 250kbps:\n",
-      "0.20055513187954313 KwH\n",
+      "0.14839048951048955 KwH\n",
       "Energy consumption at 1mbps:\n",
-      "0.05013878296988578 KwH\n",
+      "0.03709762237762239 KwH\n",
       "Energy consumption at 2mbps:\n",
-      "0.02506939148494289 KwH\n"
+      "0.018548811188811194 KwH\n"
      ]
     }
    ],
@@ -378,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
